--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "rules": {
     "jest/valid-expect": "off"
-  }
+  },
+  "parserOptions": {
+    "ecmaVersion": 6
+    },"sourceType": "module"
 }
